[project]
name = "mt-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
]

[project.scripts]
mt-downloader = "mt_downloader.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rangehttpserver>=1.4.0",
]
